Define indentation of 4 spaces for PHP files > Code MUST use 4 spaces for indenting, not tabs. See https://www.php-fig.org/psr/psr-2/

--- a/.editorconfig
+++ b/.editorconfig
@@ -33,3 +33,11 @@ indent_style = tab
 
 [*.md]
 trim_trailing_whitespace = false
+
+
+###########################################################
+; php
+###########################################################
+
+[*.php]
+indent_size = 4
