Adds the Resistor Color assignment.

--- a/config.json
+++ b/config.json
@@ -49,6 +49,17 @@
         ]
       },
       {
+        "slug": "resistor-color",
+        "uuid": "53be6837-c224-45f1-bff3-d7f74d6285ce",
+        "core": true,
+        "unlocked_by": null,
+        "difficulty": 1,
+        "topics": [
+          "arrays",
+          "strings"
+        ]
+      },
+      {
         "slug": "hamming",
         "name": "Hamming",
         "uuid": "48de430b-0d88-4af0-ab48-d00b840312bb",
