--- a/config.json
+++ b/config.json
@@ -91,6 +91,19 @@
         ]
       },
       {
+        "slug": "high-scores",
+        "name": "High Scores",
+        "uuid": "19b41c4a-1466-5c19-b547-40284189fd18",
+        "practices": [],
+        "prerequisites": [],
+        "core": false,
+        "unlocked_by": "pangram",
+        "difficulty": 2,
+        "topics": [
+          "arrays"
+        ]
+      },
+      {
         "slug": "bob",
         "name": "Bob",
         "uuid": "ae91650f-fe06-466a-a40a-6a24f5926fbe",
