--- a/config.json
+++ b/config.json
@@ -37,6 +37,22 @@
       ]
     },
     {
+      "slug": "simple-cipher",
+      "uuid": "62d60b42-93bc-4de9-90d1-1ca18a847812",
+      "core": true,
+      "unlocked_by": null,
+      "difficulty": 6,
+      "topics": [
+        "algorithms",
+        "conditionals",
+        "loops",
+        "randomness",
+        "strings",
+        "text_formatting",
+        "transforming"
+      ]
+    },
+    {
       "slug": "bob",
       "uuid": "ae91650f-fe06-466a-a40a-6a24f5926fbe",
       "core": true,
