--- a/.github/workflows/exercise-tests.yml
+++ b/.github/workflows/exercise-tests.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version: [7.3, 7.4]
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
 
         exclude:
           - php-version: 7.3
