--- a/.github/workflows/exercise-tests.yml
+++ b/.github/workflows/exercise-tests.yml
@@ -25,6 +25,12 @@ jobs:
             os: macOS-latest
 
     steps:
+      - name: Set git line endings
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          git config --system core.autocrlf false
+          git config --system core.eol lf
+
       - uses: actions/checkout@v2
 
       - uses: shivammathur/setup-php@5d27b8f90ea9479ac7af4fcaad6b411eb19d7170
