[v3] Add status to config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,12 @@
 {
   "language": "PHP",
   "active": true,
+  "status": {
+    "concept_exercises": false,
+    "test_runner": false,
+    "representer": false,
+    "analyzer": false
+  },
   "blurb": "PHP is a scripting language designed for web development, but also used as a general-purpose programming language. It's one of the most popular programming languages for web development and provides object-oriented capabilities.",
   "version": 3,
   "exercises": [
