[v3] Add version property to config.json

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "language": "PHP",
   "active": true,
   "blurb": "PHP is a scripting language designed for web development, but also used as a general-purpose programming language. It's one of the most popular programming languages for web development and provides object-oriented capabilities.",
+  "version": 3,
   "exercises": [
     {
       "slug": "hello-world",
